[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprite_selected.png" type="Texture" id=1]
[ext_resource path="res://assets/sprite_unselected.png" type="Texture" id=2]
[ext_resource path="res://Thing.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.2763, 22.2225 )

[node name="Thing" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="SpriteUnselected" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SpriteSelected" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
[connection signal="input_event" from="." to="." method="_on_Die_input_event"]
